# zoraxy-rs

./: Cargo.toml  README.md  docker-compose.yml
.github/workflows/: ci.yaml  publish.yaml
examples/: README.md  api_call_example.rs  build-plugins.sh  dynamic_capture_example.rs  event_subscriber_example.rs  helloworld.rs  static_capture_example.rs
src/: dynamic_router.rs  embed_webserver.rs  lib.rs  prelude.rs  spec.rs  static_router.rs  termination.rs
src/types/: configuration.rs  events.rs  introspection.rs  mod.rs
