[package]
name = "zoraxy-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.7"
rstest = "0.26.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tower = "0.5.1"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.40"

[dev-dependencies]
pretty_assertions = "1.4.1"
rstest = "0.26.1"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }
