[package]
name = "zoraxy-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.7", features = ["macros"] }
rstest = "0.26.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145", features = ["preserve_order"] }
tower = "0.5.1"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.40"
include_dir = "0.7.4"
mime_guess = "2.0.5"
thiserror = "2.0.17"

[dev-dependencies]
http-body-util = "0.1.2"
pretty_assertions = "1.4.1"
rstest = "0.26.1"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }
