[package]
name = "zoraxy-rs"
version = "0.1.0"
authors = [
    "Anthony Rubick <68485672+AnthonyMichaelTDM@users.noreply.github.com>",
]
description = "A Rust crate for building plugins for the Zoraxy Reverse Proxy"
edition = "2024"
license = "AGPL-3.0 and MIT"
repository = "https://github.com/aroz-online/zoraxy-rs"
categories = ["web-programming"]
homepage = "https://zoraxy.aroz.org/"


[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.7", features = ["macros"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145", features = ["preserve_order"] }
tokio = { version = "1.48.0", features = ["signal"] }
tower = "0.5.1"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }
include_dir = "0.7.4"
mime_guess = "2.0.5"
thiserror = "2.0.17"

[dev-dependencies]
# dependencies for examples and tests
chrono = "0.4.42"
http-body-util = "0.1.2"
pretty_assertions = "1.4.1"
rstest = "0.26.1"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.12.24", features = [ # don't bring in openssl
    "charset",
    "system-proxy",
], default-features = false }
html-escape = "0.2.13"
